--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -18,6 +18,8 @@
     "### Wumpus World\n",
     "![image.png](attachment:image.png)\n",
     "\n"
+    "### Asumsi Spesifikasi yang tidak dijelaskan\n",
+    "Untuk Action Grab dan Climb, tidak dijelaskan apakah dapat dilakukan di mana saja atau hanya di kotak tertentu. Penalty dari action ini juga tidak dijelaskan. Maka diasumsikan bahwa action grab dan climb mendapat penalty -1 poin jika berhasil, dan -2 poin jika gagal. Sistem ini dipilih karena agent yang dikembangkan reward-system bukan ruled-system sehingga lebih tepat dengan poin.\n",
    ]
   },
   {
